@@ -353,16 +353,10 @@ select_nodes_modified_by_cset(cset const & cs,
                               roster_t const & new_roster,
                               std::set<node_id> & nodes_modified);
 
-void
-classify_roster_paths(roster_t const & ros,
-                      path_set & unchanged,
-                      path_set & changed,
-                      path_set & missing,
-                      app_state & app);
-
 void 
-update_restricted_roster_from_filesystem(roster_t & ros, 
-                                         app_state & app);
+update_current_roster_from_filesystem(roster_t & ros, 
+                                      node_restriction const & mask,
+                                      app_state & app);
 
 void
 update_current_roster_from_filesystem(roster_t & ros,
